<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CreateListingActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainScrollView"
        android:scrollbars="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_description"
                android:id="@+id/description" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gameField"
                android:prompt="@string/form_game_hint"
                android:entries="@array/gamesList"
                android:spinnerMode="dialog" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventTypeFied"
                android:prompt="@string/form_game_hint"
                android:entries="@array/eventType"
                android:spinnerMode="dialog" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/form_price_hint"
                android:id="@+id/priceField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/form_section_hint"
                android:id="@+id/sectionField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/form_seat_hint"
                android:id="@+id/seatField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_date_hint"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="2"
                android:hint="@string/form_description_hint"
                android:id="@+id/descriptionField" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_offers_hint"
                android:id="@+id/offersField" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_submit_hint"
                android:onClick="submitForm"
                android:id="@+id/submitButton"
                android:layout_marginTop="75dp"
                android:layout_gravity="end"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>